# cactus

./: CMakeLists.txt  README.md
apps/cli/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/core/: bencode.h  crypto.h  file.h  file_manager.h  file_storage.h  metainfo.h  peer.h  peer_id.h  piece.h  piece_manager.h  sha1.h  torrent.h  tracker.h  tracker_manager.h
core/src/: bencode.cpp  crypto.cpp  file.cpp  file_manager.cpp  file_storage.cpp  metainfo.cpp  peer.cpp  peer_id.cpp  piece.cpp  piece_manager.cpp  sha1.cpp  torrent.cpp  tracker.cpp  tracker_manager.cpp
core/test/: CMakeLists.txt  test_bencode.cpp  test_file_manager.cpp  test_metainfo.cpp  test_sha1.cpp  test_torrent.cpp
core/test/test_data/: AnimalFarmByGeorgeOrwell_archive.torrent  alice.torrent
core/test/test_data/AnimalFarmByGeorgeOrwell/: debian-13.0.0-amd64-netinst.iso
